3/8/18 ---- new files created

--- a/services.html
+++ b/services.html
@@ -125,9 +125,17 @@ Gold in any form can be easily sold in bangalore if you follow the right procedu
     <div class="col-sm-3" >
 	
 <h3> <b>Quick </b> Links</h3>
-	
-	
-	
+
+	<div style="background:#d2dcdd;color:black;
+	margin: auto;
+    width:150%;
+    padding: 10px;
+    border-radius:4px;">
+	 <a href=" ">Gold / Silver Exchange</a>
+ 
+  <hr>
+  <a  href="proceed.html"> How to Proceed</a>
+</div>
 	
 	</div>
   </div>
@@ -188,7 +196,7 @@ Gold in any form can be easily sold in bangalore if you follow the right procedu
                             <a href="#!" class="textcolor"><i class="fa fa-angle-right"></i>Gold/Silver Exchange</a>
                         </p>
                        
-
+					  
                     </div>
                 </div>
                 <!-- Grid column -->
